--- a/.github/workflows/forge-stable.yaml
+++ b/.github/workflows/forge-stable.yaml
@@ -43,9 +43,11 @@ jobs:
   determine-test-metadata:
     runs-on: ubuntu-latest
     outputs:
-      IMAGE_TAG: ${{ steps.determine-test-image-tag.outputs.IMAGE_TAG }}
+      IMAGE_TAG: ${{ steps.get-docker-image-tag.outputs.IMAGE_TAG }}
       BRANCH: ${{ steps.determine-test-branch.outputs.BRANCH }}
     steps:
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3
+
       - name: Determine branch based on cadence
         id: determine-test-branch
         run: |
@@ -67,16 +69,11 @@ jobs:
             echo "BRANCH=${{ inputs.GIT_SHA }}" >> $GITHUB_OUTPUT
           fi
 
-      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3
-        with:
-          ref: ${{ steps.determine-test-branch.outputs.BRANCH }}
-          fetch-depth: 0
-
       - uses: aptos-labs/aptos-core/.github/actions/check-aptos-core@main
         with:
           cancel-workflow: ${{ github.event_name == 'schedule' }} # Cancel the workflow if it is scheduled on a fork
 
-      # find_latest_images.py requires docker utilities and having authenticated to internal docker image registries
+      # actions/get-latest-docker-image-tag requires docker utilities and having authenticated to internal docker image registries
       - uses: aptos-labs/aptos-core/.github/actions/docker-setup@main
         id: docker-setup
         with:
@@ -88,20 +85,15 @@ jobs:
           AWS_DOCKER_ARTIFACT_REPO: ${{ secrets.AWS_DOCKER_ARTIFACT_REPO }}
           GIT_CREDENTIALS: ${{ secrets.GIT_CREDENTIALS }}
 
-      - uses: ./.github/actions/python-setup
+      - uses: aptos-labs/aptos-core/.github/actions/get-latest-docker-image-tag@main
+        id: get-docker-image-tag
         with:
-          pyproject_directory: testsuite
-
-      - name: Determine image tag
-        id: determine-test-image-tag
-        # forge relies on the default and failpoints variants
-        run: ./testrun find_latest_image.py --variant failpoints --variant performance
-        shell: bash
-        working-directory: testsuite
+          branch: ${{ steps.determine-test-branch.outputs.BRANCH }}
+          variants: "failpoints performance"
 
       - name: Write summary
         run: |
-          IMAGE_TAG=${{ steps.determine-test-image-tag.outputs.IMAGE_TAG }}
+          IMAGE_TAG=${{ steps.get-docker-image-tag.outputs.IMAGE_TAG }}
           BRANCH=${{ steps.determine-test-branch.outputs.BRANCH }}
           if [ -n "${BRANCH}" ]; then
             echo "BRANCH: [${BRANCH}](https://github.com/${{ github.repository }}/tree/${BRANCH})" >> $GITHUB_STEP_SUMMARY
