--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,6 +106,7 @@ members = [
     "ecosystem/indexer-grpc/indexer-grpc-post-processor",
     "ecosystem/indexer-grpc/indexer-grpc-server-framework",
     "ecosystem/indexer-grpc/indexer-grpc-utils",
+    "ecosystem/nft-metadata-crawler-parser",
     "ecosystem/node-checker",
     "ecosystem/node-checker/fn-check-client",
     "execution/block-partitioner",
@@ -483,6 +484,8 @@ get_if_addrs = "0.5.3"
 git2 = "0.16.1"
 glob = "0.3.0"
 goldenfile = "1.1.0"
+google-cloud-auth = "0.12.0"
+google-cloud-pubsub = "0.18.0"
 handlebars = "4.2.2"
 heck = "0.3.2"
 hex = "0.4.3"
@@ -491,6 +494,7 @@ hostname = "0.3.1"
 httpmock = "0.6"
 hyper = { version = "0.14.18", features = ["full"] }
 hyper-tls = "0.5.0"
+image = "0.24.5"
 include_dir = { version = "0.7.2", features = ["glob"] }
 indicatif = "0.15.0"
 indoc = "1.0.6"
@@ -539,6 +543,7 @@ prometheus-parse = "0.2.4"
 proptest = "1.0.0"
 proptest-derive = "0.3.0"
 prost = "0.11.3"
+prost-types = "0.11.3"
 quanta = "0.10.1"
 quote = "1.0.18"
 rand = "0.7.3"
