--- a/crates/reliable-broadcast/Cargo.toml
+++ b/crates/reliable-broadcast/Cargo.toml
@@ -18,14 +18,17 @@ aptos-consensus-types = { workspace = true }
 aptos-enum-conversion-derive = { workspace = true }
 aptos-infallible = { workspace = true }
 aptos-logger = { workspace = true }
+aptos-time-service = { workspace = true }
 aptos-types = { workspace = true }
 async-trait = { workspace = true }
 futures = { workspace = true }
 futures-channel = { workspace = true }
 tokio = { workspace = true }
+tokio-retry = { workspace = true }
 
 [dev-dependencies]
 aptos-consensus-types = { workspace = true, features = ["fuzzing"] }
+aptos-time-service = { workspace = true, features = ["testing"] }
 
 [features]
 default = []
