--- a/Cargo.toml
+++ b/Cargo.toml
@@ -485,8 +485,8 @@ get_if_addrs = "0.5.3"
 git2 = "0.16.1"
 glob = "0.3.0"
 goldenfile = "1.1.0"
-google-cloud-auth = "0.12.0"
 google-cloud-pubsub = "0.18.0"
+google-cloud-storage = "0.13.0"
 handlebars = "4.2.2"
 heck = "0.3.2"
 hex = "0.4.3"
@@ -594,6 +594,7 @@ tempfile = "3.3.0"
 termcolor = "1.1.2"
 textwrap = "0.15.0"
 thiserror = "1.0.37"
+time = { version = "0.3.24", features = ["serde"] }
 tiny-bip39 = "0.8.2"
 tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
 tracing = "0.1.34"
