--- a/ecosystem/nft-metadata-crawler-parser/Cargo.toml
+++ b/ecosystem/nft-metadata-crawler-parser/Cargo.toml
@@ -25,13 +25,14 @@ csv = { workspace = true }
 diesel = { workspace = true }
 field_count = { workspace = true }
 futures = { workspace = true }
-google-cloud-auth = { workspace = true }
 google-cloud-pubsub = { workspace = true }
+google-cloud-storage = { workspace = true }
 image = { workspace = true }
 regex = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+time = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
