--- a/Cargo.toml
+++ b/Cargo.toml
@@ -426,6 +426,7 @@ ark-serialize = "0.4.0"
 ark-std = { version = "0.4.0", features = ["getrandom"] }
 assert_approx_eq = "1.1.0"
 assert_unordered = "0.3.5"
+async-graphql-reverse = { git = "https://github.com/banool/async-graphql-reverse.git", rev = "dfcbf9a34bea05c18d5b871aebae32c366b6b60b" }
 async-stream = "0.3"
 async-trait = "0.1.53"
 axum = "0.5.16"
