--- a/crates/aptos/Cargo.toml
+++ b/crates/aptos/Cargo.toml
@@ -45,6 +45,7 @@ aptos-transactional-test-harness = { workspace = true }
 aptos-types = { workspace = true }
 aptos-vm = { workspace = true, features = ["testing"] }
 aptos-vm-genesis = { workspace = true }
+async-graphql-reverse = { workspace = true }
 async-trait = { workspace = true }
 base64 = { workspace = true }
 bcs = { workspace = true }
