--- a/.github/workflows/check-sdk-examples.yaml
+++ b/.github/workflows/check-sdk-examples.yaml
@@ -15,6 +15,7 @@ jobs:
   # whereas we run the test-sdk-confirm-client-generated-publish against a node
   # built from the same commit and run as part of that CI job.
   run-examples:
+    if: (github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'CICD:non-required-tests'))
     runs-on: ubuntu-latest
     env:
       APTOS_NODE_URL: https://fullnode.devnet.aptoslabs.com
@@ -44,6 +45,7 @@ jobs:
           command: cd ./ecosystem/typescript/sdk/examples/javascript && pnpm install && pnpm test
 
   run-python-examples:
+    if: (github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'CICD:non-required-tests'))
     runs-on: ubuntu-latest
     env:
       APTOS_NODE_URL: https://fullnode.devnet.aptoslabs.com/v1
